# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: cpu.h  display.h  io.h  memory.h
src/: cpu.c  display.c  io.c  memory.c
